--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.webp" />
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RK Eventz</title>
 </head>
@@ -11,6 +13,8 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="bower_components/aos/dist/aos.js"></script>
+
 </body>
 
 </html>
